--- a/config/sync/block.block.seven_system_main.yml
+++ b/config/sync/block.block.seven_system_main.yml
@@ -8,7 +8,7 @@ dependencies:
     - seven
 _core:
   default_config_hash: YRY68JWkaUiGeZlWMv1nzeIgDm0ZZwXYgpqUpLFzwAY
-id: seven_content
+id: seven_system_main
 theme: seven
 region: content
 weight: 0
@@ -16,7 +16,7 @@ provider: null
 plugin: system_main_block
 settings:
   id: system_main_block
-  label: 'Main page content'
+  label: ''
   provider: system
   label_display: '0'
 visibility: {  }
