--- a/config/sync/user.role.administrator.yml
+++ b/config/sync/user.role.administrator.yml
@@ -5,7 +5,107 @@ dependencies: {  }
 _core:
   default_config_hash: Om6FEO7vZZMkPIbVvfxtdkWerQ2PvQM4sWUd6Q3ZnfI
 id: administrator
-label: Administrator
+label: administrator
 weight: 2
 is_admin: true
-permissions: {  }
+permissions:
+  - 'access administration pages'
+  - 'access all views'
+  - 'access comments'
+  - 'access content'
+  - 'access content overview'
+  - 'access contextual links'
+  - 'access dashboard'
+  - 'access media browser'
+  - 'access overlay'
+  - 'access site in maintenance mode'
+  - 'access site reports'
+  - 'access toolbar'
+  - 'access user profiles'
+  - 'administer actions'
+  - 'administer blocks'
+  - 'administer comments'
+  - 'administer content types'
+  - 'administer fields'
+  - 'administer file types'
+  - 'administer files'
+  - 'administer filters'
+  - 'administer image styles'
+  - 'administer media browser'
+  - 'administer menu'
+  - 'administer modules'
+  - 'administer nodes'
+  - 'administer permissions'
+  - 'administer search'
+  - 'administer shortcuts'
+  - 'administer site configuration'
+  - 'administer software updates'
+  - 'administer taxonomy'
+  - 'administer themes'
+  - 'administer url aliases'
+  - 'administer users'
+  - 'administer views'
+  - 'block IP addresses'
+  - 'bypass file access'
+  - 'bypass node access'
+  - 'cancel account'
+  - 'change own username'
+  - 'create article content'
+  - 'create files'
+  - 'create page content'
+  - 'create url aliases'
+  - 'customize shortcut links'
+  - 'delete any article content'
+  - 'delete any audio files'
+  - 'delete any document files'
+  - 'delete any image files'
+  - 'delete any page content'
+  - 'delete any video files'
+  - 'delete own article content'
+  - 'delete own audio files'
+  - 'delete own document files'
+  - 'delete own image files'
+  - 'delete own page content'
+  - 'delete own video files'
+  - 'delete revisions'
+  - 'delete terms in 1'
+  - 'download any audio files'
+  - 'download any document files'
+  - 'download any image files'
+  - 'download any video files'
+  - 'download own audio files'
+  - 'download own document files'
+  - 'download own image files'
+  - 'download own video files'
+  - 'edit any article content'
+  - 'edit any audio files'
+  - 'edit any document files'
+  - 'edit any image files'
+  - 'edit any page content'
+  - 'edit any video files'
+  - 'edit own article content'
+  - 'edit own audio files'
+  - 'edit own comments'
+  - 'edit own document files'
+  - 'edit own image files'
+  - 'edit own page content'
+  - 'edit own video files'
+  - 'edit terms in 1'
+  - 'post comments'
+  - 'revert revisions'
+  - 'search content'
+  - 'select account cancellation method'
+  - 'skip comment approval'
+  - 'switch shortcut sets'
+  - 'use advanced search'
+  - 'use ctools import'
+  - 'use media wysiwyg'
+  - 'use text format filtered_html'
+  - 'use text format full_html'
+  - 'view files'
+  - 'view own files'
+  - 'view own private files'
+  - 'view own unpublished content'
+  - 'view private files'
+  - 'view revisions'
+  - 'view the administration theme'
