--- a/config/sync/block.block.bartik_system_main.yml
+++ b/config/sync/block.block.bartik_system_main.yml
@@ -8,7 +8,7 @@ dependencies:
     - bartik
 _core:
   default_config_hash: 9EoWV2Lot6FVSr50t4hoKgiz1LIXYWNG-IIPYsWxBqo
-id: bartik_content
+id: bartik_system_main
 theme: bartik
 region: content
 weight: 0
@@ -16,7 +16,7 @@ provider: null
 plugin: system_main_block
 settings:
   id: system_main_block
-  label: 'Main page content'
+  label: ''
   provider: system
   label_display: '0'
 visibility: {  }
