--- a/config/sync/block.block.bartik_system_powered_by.yml
+++ b/config/sync/block.block.bartik_system_powered_by.yml
@@ -8,7 +8,7 @@ dependencies:
     - bartik
 _core:
   default_config_hash: jQQUUWN2Uxr5qZtc9zcJKBCxpKY8orN1u2HPqYYRQDI
-id: bartik_powered
+id: bartik_system_powered_by
 theme: bartik
 region: footer_fifth
 weight: 10
@@ -16,7 +16,7 @@ provider: null
 plugin: system_powered_by_block
 settings:
   id: system_powered_by_block
-  label: 'Powered by Drupal'
+  label: ''
   provider: system
   label_display: '0'
 visibility: {  }
