--- a/config/sync/filter.format.full_html.yml
+++ b/config/sync/filter.format.full_html.yml
@@ -1,36 +1,36 @@
 uuid: d668c3c1-818d-45f1-a9e3-0453d4374e15
 langcode: en
 status: true
-dependencies:
-  module:
-    - editor
+dependencies: {  }
 _core:
   default_config_hash: WNeK5FbcY8pXgEpbD_KgRzlF1-5PL3BJXwqaBctPTqw
 name: 'Full HTML'
 format: full_html
-weight: 2
+weight: 1
 filters:
-  filter_align:
-    id: filter_align
-    provider: filter
-    status: true
-    weight: 8
-    settings: {  }
-  filter_caption:
-    id: filter_caption
-    provider: filter
-    status: true
-    weight: 9
-    settings: {  }
   filter_htmlcorrector:
     id: filter_htmlcorrector
     provider: filter
     status: true
     weight: 10
     settings: {  }
-  editor_file_reference:
-    id: editor_file_reference
-    provider: editor
+  filter_autop:
+    id: filter_autop
+    provider: filter
     status: true
-    weight: 11
+    weight: 1
     settings: {  }
+  filter_url:
+    id: filter_url
+    provider: filter
+    status: true
+    weight: 0
+    settings:
+      filter_url_length: 72
+  filter_null:
+    id: filter_null
+    provider: filter
+    status: true
+    weight: 1
+    settings:
+      replace: '0'
