Alter file migration so it does not copy files

--- a/config/sync/migrate_plus.migration.upgrade_d7_file.yml
+++ b/config/sync/migrate_plus.migration.upgrade_d7_file.yml
@@ -36,10 +36,8 @@ process:
       plugin: urlencode
   uri:
     -
-      plugin: file_copy
-      source:
-        - '@source_full_path'
-        - uri
+      plugin: get
+      source: uri
   filemime:
     -
       plugin: get
