--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
           username: $QUAY_USERNAME_V2
           password: $QUAY_PASSWORD_V2
     steps:
+      - checkout
       - setup_remote_docker:
           docker_layer_caching: true
       - run:
