--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/migrate_tools": "^4.1",
         "drupal/migrate_upgrade": "^3.0",
         "drush/drush": "^9.7",
+        "juampynr/dropbox-api": "dev-master",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
